--- a/nba.ipynb
+++ b/nba.ipynb
@@ -1,11 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "STRENGTH IN NUMBERS\n",
+    "This is a coding project to go indepth on the state of the current Golden State Warriors team. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from nba_api.stats.static import teams, players\n",
+    "from nba_api.stats.endpoints import leaguegamefinder \n",
+    "from nba_api.live.nba.endpoints import boxscore\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1610612744\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify the Warriors team ID \n",
+    "nba_teams = teams.get_teams()\n",
+    "warriors = [team for team in nba_teams if team[\"full_name\"] == \"Golden State Warriors\"][0]\n",
+    "warriors_id = warriors['id']\n",
+    "\n",
+    "print(warriors_id)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +55,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
