Get the current Warriors season

--- a/nba.ipynb
+++ b/nba.ipynb
@@ -5,18 +5,19 @@
    "metadata": {},
    "source": [
     "STRENGTH IN NUMBERS\n",
-    "This is a coding project to go indepth on the state of the current Golden State Warriors team. "
+    "\n",
+    "This is a coding project to go in depth on the state of the current Golden State Warriors team... and hopefully get some insight on why they keep losing! We'll start with overall team stats and go into player details."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries and API calls\n",
     "from nba_api.stats.static import teams, players\n",
     "from nba_api.stats.endpoints import leaguegamefinder \n",
-    "from nba_api.live.nba.endpoints import boxscore\n",
     "\n",
     "\n",
     "import numpy as np\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +46,484 @@
     "warriors_id = warriors['id']\n",
     "\n",
     "print(warriors_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEASON_ID</th>\n",
+       "      <th>TEAM_ID</th>\n",
+       "      <th>TEAM_ABBREVIATION</th>\n",
+       "      <th>TEAM_NAME</th>\n",
+       "      <th>GAME_ID</th>\n",
+       "      <th>GAME_DATE</th>\n",
+       "      <th>MATCHUP</th>\n",
+       "      <th>WL</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>FGM</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>FG_PCT</th>\n",
+       "      <th>FG3M</th>\n",
+       "      <th>FG3A</th>\n",
+       "      <th>FG3_PCT</th>\n",
+       "      <th>FTM</th>\n",
+       "      <th>FTA</th>\n",
+       "      <th>FT_PCT</th>\n",
+       "      <th>OREB</th>\n",
+       "      <th>DREB</th>\n",
+       "      <th>REB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PLUS_MINUS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400431</td>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>GSW vs. PHX</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>109</td>\n",
+       "      <td>41</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>12</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>15</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.789</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400426</td>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>GSW @ LAC</td>\n",
+       "      <td>L</td>\n",
+       "      <td>242</td>\n",
+       "      <td>92</td>\n",
+       "      <td>35</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>7</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400408</td>\n",
+       "      <td>2024-12-25</td>\n",
+       "      <td>GSW vs. LAL</td>\n",
+       "      <td>L</td>\n",
+       "      <td>240</td>\n",
+       "      <td>113</td>\n",
+       "      <td>41</td>\n",
+       "      <td>89</td>\n",
+       "      <td>0.461</td>\n",
+       "      <td>18</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.765</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400403</td>\n",
+       "      <td>2024-12-23</td>\n",
+       "      <td>GSW vs. IND</td>\n",
+       "      <td>L</td>\n",
+       "      <td>239</td>\n",
+       "      <td>105</td>\n",
+       "      <td>39</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>12</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.316</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.714</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>-6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400383</td>\n",
+       "      <td>2024-12-21</td>\n",
+       "      <td>GSW @ MIN</td>\n",
+       "      <td>W</td>\n",
+       "      <td>241</td>\n",
+       "      <td>113</td>\n",
+       "      <td>40</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.460</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.381</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.739</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SEASON_ID     TEAM_ID TEAM_ABBREVIATION  ... TOV  PF PLUS_MINUS\n",
+       "0     22024  1610612744               GSW  ...  11  17        4.0\n",
+       "1     22024  1610612744               GSW  ...  14  16      -10.0\n",
+       "2     22024  1610612744               GSW  ...  12  18       -2.0\n",
+       "3     22024  1610612744               GSW  ...  11  13       -6.0\n",
+       "4     22024  1610612744               GSW  ...  10  23       10.0\n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all games where the Warriors were playing \n",
+    "warriors_gamefinder = leaguegamefinder.LeagueGameFinder(team_id_nullable=warriors_id)\n",
+    "\n",
+    "warriors_games = warriors_gamefinder.get_data_frames()[0]\n",
+    "warriors_games.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEASON_ID</th>\n",
+       "      <th>TEAM_ID</th>\n",
+       "      <th>TEAM_ABBREVIATION</th>\n",
+       "      <th>TEAM_NAME</th>\n",
+       "      <th>GAME_ID</th>\n",
+       "      <th>GAME_DATE</th>\n",
+       "      <th>MATCHUP</th>\n",
+       "      <th>WL</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>FGM</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>FG_PCT</th>\n",
+       "      <th>FG3M</th>\n",
+       "      <th>FG3A</th>\n",
+       "      <th>FG3_PCT</th>\n",
+       "      <th>FTM</th>\n",
+       "      <th>FTA</th>\n",
+       "      <th>FT_PCT</th>\n",
+       "      <th>OREB</th>\n",
+       "      <th>DREB</th>\n",
+       "      <th>REB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PLUS_MINUS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400431</td>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>GSW vs. PHX</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>109</td>\n",
+       "      <td>41</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.418</td>\n",
+       "      <td>12</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>15</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.789</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400426</td>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>GSW @ LAC</td>\n",
+       "      <td>L</td>\n",
+       "      <td>242</td>\n",
+       "      <td>92</td>\n",
+       "      <td>35</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>7</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400408</td>\n",
+       "      <td>2024-12-25</td>\n",
+       "      <td>GSW vs. LAL</td>\n",
+       "      <td>L</td>\n",
+       "      <td>240</td>\n",
+       "      <td>113</td>\n",
+       "      <td>41</td>\n",
+       "      <td>89</td>\n",
+       "      <td>0.461</td>\n",
+       "      <td>18</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.765</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400403</td>\n",
+       "      <td>2024-12-23</td>\n",
+       "      <td>GSW vs. IND</td>\n",
+       "      <td>L</td>\n",
+       "      <td>239</td>\n",
+       "      <td>105</td>\n",
+       "      <td>39</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>12</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.316</td>\n",
+       "      <td>15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.714</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>-6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22024</td>\n",
+       "      <td>1610612744</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>Golden State Warriors</td>\n",
+       "      <td>0022400383</td>\n",
+       "      <td>2024-12-21</td>\n",
+       "      <td>GSW @ MIN</td>\n",
+       "      <td>W</td>\n",
+       "      <td>241</td>\n",
+       "      <td>113</td>\n",
+       "      <td>40</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.460</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.381</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.739</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SEASON_ID     TEAM_ID TEAM_ABBREVIATION  ... TOV  PF PLUS_MINUS\n",
+       "0     22024  1610612744               GSW  ...  11  17        4.0\n",
+       "1     22024  1610612744               GSW  ...  14  16      -10.0\n",
+       "2     22024  1610612744               GSW  ...  12  18       -2.0\n",
+       "3     22024  1610612744               GSW  ...  11  13       -6.0\n",
+       "4     22024  1610612744               GSW  ...  10  23       10.0\n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Isolate the 2024-2025 season\n",
+    "warriors_season = warriors_games[warriors_games.SEASON_ID.str[-4:].isin(['2024', '2025'])]\n",
+    "warriors_season.head()"
    ]
   }
  ],
